Initial version k8s job for unseal

--- a/manifests/kots-preflight.yaml
+++ b/manifests/kots-preflight.yaml
@@ -19,10 +19,10 @@ spec:
     - containerRuntime:
         outcomes:
           - pass:
-              when: "== docker"
-              message: Docker container runtime was found.
+              when: "== containerd"
+              message: Containerd container runtime was found.
           - fail:
-              message: Did not find Docker container runtime.
+              message: Did not find Containerd container runtime.
     - distribution:
         checkName: Check Kubernetes environment.
         outcomes:
