--- a/manifests/kots-app.yaml
+++ b/manifests/kots-app.yaml
@@ -1,14 +1,10 @@
 apiVersion: kots.io/v1beta1
 kind: Application
 metadata:
-  name: app-slug
+  name: vault-initializer
 spec:
-  title: App Name
+  title: Vault Initializer
   icon: https://raw.githubusercontent.com/cncf/artwork/master/projects/kubernetes/icon/color/kubernetes-icon-color.png
   statusInformers:
     - deployment/example-nginx
-  ports:
-    - serviceName: "example-nginx"
-      servicePort: 80
-      localPort: 8888
-      applicationUrl: "http://example-nginx"
+
